fix: there is now an active flag in the voting weeks for clear archiving (#12)
Co-authored-by: David Schramm <david.jakob.schramm@gmail.com>